2004-12-15  Jackson Harper  <jackson@ximian.com>

	* X11Keyboard.cs: Fix to compile with csc.
	
2004-12-15  Jackson Harper  <jackson@ximian.com>

	* X11Structs.cs: Add key mask values
	* XplatUIStruct.cs: Add keyboard event flags, and keyboard definitions
	* X11Keyboard.cs: New file - Extrapolates and interpolates key
	down/up foo into WM_CHAR foo
	* KeyboardLayouts.cs: Common keyboard layouts
	* XplatUIX11.cs: Add the keyboard driver. Add functionality to
	post messages into the main queue.

2004-12-13  Jordi Mas i Hernandez <jordi@ximian.com>

	* Button.cs: implement ProcessMnemonic
	* ThemeWin32Classic.cs: use ResPool (caching) instead of creating
	  brushes everytime
	* Control.cs: fixes IsMnemonic (support for &&, case insensitive, etc)
	* ButtonBase.cs: Show HotkeyPrefix (not the &)	

2004-12-12  John BouAntoun  <jba-mon@optusnet.com.au>
	
	* MonthCalendar.cs: Implemented click-hold for next/previous month
	  and date selection
	  
2004-12-11  Peter Bartok  <pbartok@novell.com>

	* X11Structs.cs:
	  - Added XKeyboardState (moved from XplatUIX11.cs)
	  - Added XCreateGC related enums and structures
	  - Added GXFunction for XSetFunction

	* XplatUIStructs.cs: Added missing WS_EX_xxx definitions

	* XplatUI.cs: Added CreateCaret(), DestroyCaret(), SetCaretPos() and
	  CaretVisible() calls

	* ToolTip.cs: Added code to prevent stealing focus from app windows

	* XplatUIDriver.cs: Added abstracts for caret functions (CreateCaret,
	  DestroyCaret, SetCaretPos and CaretVisible)

	* XplatUIX11.cs:
	  - Added implementation for caret functions
	  - Moved hover variables into a struct, to make it a bit easier
	    on the eyes and to debug
	  - Removed XKeyboardState (moved to XplatUIX11.cs)
	  - Moved Keyboard properties into the properties region

	* Control.cs (get_Region): Control.CreateGraphics is the appropriate
	  call to get a graphics context for our control

	* XplatUIOSX.cs: Added empty overrides for the new caret functions
